# as-harness

./: .gitignore  .mise.toml  AGENTS.md  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  agent-todo.md  package.json
assembly/: README.md  package-lock.json  package.json  roadmap.md
cli/: README.md  biome.json  build-targets.test.ts  build-targets.ts  build.ts  coverage.test.ts  index.node-runtime.test.ts  index.test.ts  index.ts  package.json  reporter.test.ts  reporter.ts  run.test.ts  run.ts  source-host-targets.ts  tsconfig.json
docs/: 001-2026-03-13-primary-buildout.md  002-2026-03-13-strict-equality-machinery.md  003-2026-03-17-harness-abi.md  004-2026-03-17-release-process.md  005-2026-03-17-jest-adapter.md  006-2026-03-17-guest-runtime-contracts.md  007-2026-03-17-host-runner-contract.md  008-2026-03-19-vitest-adapter.md  009-2026-03-19-vitest-scheduling-and-test-graph-strategy.md  010-2026-03-21-ci-flakiness-log.md  011-2026-03-22-v0-4-0-roadmap-and-adapter-priority.md  012-2026-03-22-mocha-adapter-interface.md  013-2026-03-22-jasmine-adapter-interface.md  014-2026-03-22-uvu-adapter-interface.md  015-2026-03-22-guest-hint-and-constraint-plan.md  016-2026-03-22-snapshot-artifact-contract.md  017-2026-03-22-ava-adapter-interface.md  018-2026-03-22-tape-adapter-interface.md  019-2026-03-23-tap-adapter-interface.md  020-2026-03-23-qunit-adapter-interface.md  (+16 more)
harness/wasmtime/: .gitignore  Cargo.toml  README.md  index.cjs  index.d.ts  package.json
harness/wasmtime/scripts/: build.mjs
harness/wasmtime/src/: lib.rs
harness/wasmtime/test/: smoke.host.cjs
(+256 files in other folders)
